--- a/PlasticMan/PlasticMan.html
+++ b/PlasticMan/PlasticMan.html
@@ -2,18 +2,40 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Plastic Man</title>
 </head>
-
 <body>
-<h2>Plastic Man</h2>
-<img src="PlasticMan001.jpg"> <br>
-Creator: Jack Cole<br>
-Series: on-going<br>
-Publisher: 1943 Quality Comics<br>
+<img src="PlasticMan001.jpg"><br>
+64 issues from 1943 - 1956 by <a href="../QualityComics/QualityComics.html">Quality Comics</a>
 <p>
-Plastic Man (real name Patrick "Eel" O'Brian) is a fictional character originally published by Quality Comics and later acquired by DC Comics. Created by cartoonist Jack Cole, Plastic Man was one of the first superheroes to incorporate humor into mainstream action storytelling. The character hasThe first appearance was in Police Comics #1 in 1941. He has been published in several solo series and has interacted with other characters in the mainstream DC Universe as a member of the Justice League. He has additionally appeared in several television and video game adaptations, including a short-lived television show of his own.
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan011.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PlasticMan012.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
+Plastic Man (real name Patrick "Eel" O'Brian) is a fictional character originally published by Quality Comics and later acquired by DC Comics. Created by cartoonist Jack Cole, Plastic Man was one of the first superheroes to incorporate humor into mainstream action storytelling. The character hasThe first appearance was in <a href="../PoliceComics/PoliceComics.html">Police Comics</a> #1 in 1941. He has been published in several solo series and has interacted with other characters in the mainstream DC Universe as a member of the Justice League. He has additionally appeared in several television and video game adaptations, including a short-lived television show of his own.
 </p><p>
 
 </p>
