--- a/PoliceComics/PoliceComics.html
+++ b/PoliceComics/PoliceComics.html
@@ -2,16 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Police Comics</title>
 </head>
 
 <body>
-<h2>Police Comics</h2>
 <img src="PoliceComics001.jpg"> <br>
-Creator: Jack Cole<br>
-Series: on-going<br>
-Publisher: 1941 Quality Comics<br>
+124 issues from 1941-1953 by <a href="../QualityComics/QualityComics.html">Quality Comics</a>
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics002.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics003.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics004.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics005.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics006.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics007.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics008.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics009.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics010.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PoliceComics011.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 <p>
 Police Comics was a comic book anthology title published by Quality Comics (under its imprint "Comic Magazines") from 1941 until 1953. It featured short stories in the superhero, crime and humor genres.
 </p><p>
