--- a/index.html
+++ b/index.html
@@ -387,6 +387,13 @@
 </tr>
 
 <tr>
+<td>ABC</td>
+<td>1943</td>
+<td>Publisher</td>
+<td><a href="ABC/ABC.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Abe Sapien</td>
 <td>2013</td>
 <td>Dark Horse</td>
@@ -405,20 +412,6 @@
 <td>1995</td>
 <td>Vertigo</td>
 <td><a href="AbsoluteVertigo/AbsoluteVertigo.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Adam Hughes</td>
-<td>1967</td>
-<td>Creator</td>
-<td><a href="AdamHughes/AdamHughes.html">Details</a></td>
-</tr>
-
-<tr>
-<td>Adam Kubert</td>
-<td>1959</td>
-<td>Creator</td>
-<td><a href="AdamKubert/AdamKubert.html">Details</a></td>
 </tr>
 
 <tr>
@@ -510,6 +503,20 @@
 <td>1949</td>
 <td>Atlas</td>
 <td><a href="ActualRomances/actualromances.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adam Hughes</td>
+<td>1967</td>
+<td>Creator</td>
+<td><a href="AdamHughes/AdamHughes.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adam Kubert</td>
+<td>1959</td>
+<td>Creator</td>
+<td><a href="AdamKubert/AdamKubert.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3490,6 +3497,13 @@
 <td>2016</td>
 <td>DC</td>
 <td><a href="CaveCarson/CaveCarson.html">Details</a></td>
+</tr>
+
+<tr>
+<td>CBS</td>
+<td>1927</td>
+<td>Publisher</td>
+<td><a href="CBS/CBS.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7632,6 +7646,13 @@
 </tr>
 
 <tr>
+<td>Hello Kitty</td>
+<td>1974</td>
+<td>Sanrio</td>
+<td><a href="HelloKitty/HelloKitty.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hellraiser Nightbreed Jihad</td>
 <td>1991</td>
 <td>Epic</td>
@@ -8421,6 +8442,13 @@
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="J2/J2.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jack Cole</td>
+<td>1914</td>
+<td>Creator</td>
+<td><a href="JackCole/JackCole.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11320,6 +11348,13 @@
 <td>1957</td>
 <td>Atlas</td>
 <td><a href="NavyTales/NavyTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>NBC</td>
+<td>1957</td>
+<td>Publisher</td>
+<td><a href="NBC/NBC.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15285,7 +15320,7 @@
 <td>Toy Story</td>
 <td>1995</td>
 <td>Pixar</td>
-<td><a href="Toystory/Toystory.html">Details</a></td>
+<td><a href="ToyStory/ToyStory.html">Details</a></td>
 </tr>
 
 <tr>
