--- a/revenue.html
+++ b/revenue.html
@@ -17,208 +17,208 @@
 <th>Details</th>
 </tr>
 <tr>
-<td>Pokemon</td><td>1996</td><td>90.00</td><td>Pokemon</td><td><a href="Creation/Pokemon/Pokemon.html">Details</a></td>
+<td>Pokemon</td><td>1996</td><td>95.00</td><td>Pokemon</td><td><a href="Pokemon/Pokemon.html">Details</a></td>
 </tr>
 <tr>
-<td>Star Wars</td><td>1977</td><td>65.00</td><td>Disney</td><td><a href="https://blzimg.github.io/StarWars/StarWars.html">Details</a></td>
+<td>Star Wars</td><td>1977</td><td>65.00</td><td>Disney</td><td><a href="StarWars/StarWars.html">Details</a></td>
 </tr>
 <tr>
-<td>Hello Kitty</td><td>1974</td><td>80.00</td><td>Sanrio</td><td>Details</td>
+<td>Hello Kitty</td><td>1974</td><td>80.00</td><td>Sanrio</td><td><a href="HelloKitty/HelloKitty.html">Details</a></td>
 </tr>
 <tr>
-<td>Harry Potter (Wizarding World)</td><td>1997</td><td>31.00</td><td>AT &amp; T</td><td><a href="Creation/HarryPotter/HarryPotter.html">Details</a></td>
+<td>Harry Potter (Wizarding World)</td><td>1997</td><td>31.00</td><td>AT &amp; T</td><td><a href="HarryPotter/HarryPotter.html">Details</a></td>
 </tr>
 <tr>
-<td>Batman</td><td>1939</td><td>25.00</td><td>AT &amp; T</td><td><a href="Creation/Batman/Batman.html">Details</a></td>
+<td>Batman</td><td>1939</td><td>25.00</td><td>AT &amp; T</td><td><a href="Batman/Batman.html">Details</a></td>
 </tr>
 <tr>
-<td>James Bond</td><td>1953</td><td>19.90</td><td>MGM</td><td><a href="Creation/JamesBond/JamesBond.html">Details</a></td>
+<td>James Bond</td><td>1953</td><td>19.90</td><td>MGM</td><td><a href="JamesBond/JamesBond.html">Details</a></td>
 </tr>
 <tr>
-<td>Toy Story</td><td>1995</td><td>20.40</td><td>Disney</td><td><a href="Creation/Toystory/Toystory.html">Details</a></td>
+<td>Toy Story</td><td>1995</td><td>20.40</td><td>Disney</td><td><a href="ToyStory/ToyStory.html">Details</a></td>
 </tr>
 <tr>
-<td>Call of Duty</td><td>2003</td><td>17.00</td><td>Activision Blizzard</td><td><a href="Creation/CallOfDuty/CallOfDuty.html">Details</a></td>
+<td>Call of Duty</td><td>2003</td><td>17.00</td><td>Activision Blizzard</td><td><a href="CallOfDuty/CallOfDuty.html">Details</a></td>
 </tr>
 <tr>
-<td>Space Invaders</td><td>1978</td><td>13.93</td><td>Square Enix</td><td><a href="Creation/SpaceInvaders/SpaceInvaders.html">Details</a></td>
+<td>Space Invaders</td><td>1978</td><td>13.93</td><td>Square Enix</td><td><a href="SpaceInvaders/SpaceInvaders.html">Details</a></td>
 </tr>
 <tr>
-<td>Pac-Man</td><td>1980</td><td>15.10</td><td>Bandai Namco</td><td><a href="Creation/PacMan/PacMan.html">Details</a></td>
+<td>Pac-Man</td><td>1980</td><td>15.10</td><td>Bandai Namco</td><td><a href="PacMan/PacMan.html">Details</a></td>
 </tr>
 <tr>
-<td>Dora the Explorer</td><td>2000</td><td>15.70</td><td>Nickelodeon</td><td><a href="Creation/DoraTheExplorer/DoraTheExplorer.html">Details</a></td>
+<td>Dora the Explorer</td><td>2000</td><td>15.70</td><td>Nickelodeon</td><td><a href="DoraTheExplorer/DoraTheExplorer.html">Details</a></td>
 </tr>
 <tr>
-<td>Marvel Cinematic Universe</td><td>2008</td><td>33.60</td><td>Disney</td><td><a href="Creation/MarvelCinematicUniverse/mcu.html">Details</a></td>
+<td>Marvel Cinematic Universe</td><td>2008</td><td>33.60</td><td>Disney</td><td><a href="MarvelCinematicUniverse/mcu.html">Details</a></td>
 </tr>
 <tr>
-<td>Simpsons</td><td>1989</td><td>15.30</td><td>Disney</td><td><a href="Creation/Simpsons/Simpsons.html">Details</a></td>
+<td>Simpsons</td><td>1989</td><td>15.30</td><td>Disney</td><td><a href="Simpsons/Simpsons.html">Details</a></td>
 </tr>
 <tr>
-<td>SpongeBob SquarePants</td><td>1999</td><td>14.10</td><td>Nickelodeon</td><td><a href="Creation/SpongeBobSquarePants/SpongeBobSquarePants.html">Details</a></td>
+<td>SpongeBob SquarePants</td><td>1999</td><td>14.10</td><td>Nickelodeon</td><td><a href="SpongeBobSquarePants/SpongeBobSquarePants.html">Details</a></td>
 </tr>
 <tr>
-<td>Cars</td><td>2006</td><td>21.80</td><td>Disney</td><td><a href="Creation/Cars/Cars.html">Details</a></td>
+<td>Cars</td><td>2006</td><td>21.80</td><td>Disney</td><td><a href="Cars/Cars.html">Details</a></td>
 </tr>
 <tr>
-<td>Street Fighter</td><td>1987</td><td>11.50</td><td>Capcom</td><td><a href="Creation/StreetFighter/StreetFighter.html">Details</a></td>
+<td>Street Fighter</td><td>1987</td><td>11.50</td><td>Capcom</td><td><a href="StreetFighter/StreetFighter.html">Details</a></td>
 </tr>
 <tr>
-<td>Lion King</td><td>1994</td><td>14.30</td><td>Disney</td><td><a href="Creation/LionKing/LionKing.html">Details</a></td>
+<td>Lion King</td><td>1994</td><td>14.30</td><td>Disney</td><td><a href="LionKing/LionKing.html">Details</a></td>
 </tr>
 <tr>
-<td>Star Trek</td><td>1966</td><td>10.60</td><td>CBS</td><td><a href="Creation/StarTrek/StarTrek.html">Details</a></td>
+<td>Star Trek</td><td>1966</td><td>10.60</td><td>CBS</td><td><a href="StarTrek/StarTrek.html">Details</a></td>
 </tr>
 <tr>
-<td>Warcraft</td><td>1994</td><td>11.10</td><td>Activision Blizzard</td><td><a href="https://blzimg.github.io/Warcraft/Warcraft.html">Details</a></td>
+<td>Warcraft</td><td>1994</td><td>11.10</td><td>Activision Blizzard</td><td><a href="Warcraft/Warcraft.html">Details</a></td>
 </tr>
 <tr>
-<td>Dungeon Fighter Online</td><td>2005</td><td>11.80</td><td>Nexon</td><td><a href="Creation/DungeonFighterOnline/DFO.html">Details</a></td>
+<td>Dungeon Fighter Online</td><td>2005</td><td>11.80</td><td>Nexon</td><td><a href="DungeonFighterOnline/DFO.html">Details</a></td>
 </tr>
 <tr>
-<td>Transformers</td><td>1984</td><td>17.20</td><td>Hasbro, Tomy</td><td><a href="Creation/Transformers/Transformers.html">Details</a></td>
+<td>Transformers</td><td>1984</td><td>17.20</td><td>Hasbro, Tomy</td><td><a href="Transformers/Transformers.html">Details</a></td>
 </tr>
 <tr>
-<td>Ultraman</td><td>1966</td><td>11.60</td><td>Tsuburaya Productions</td><td><a href="Creation/Ultraman/Ultraman.html">Details</a></td>
+<td>Ultraman</td><td>1966</td><td>11.60</td><td>Tsuburaya Productions</td><td><a href="Ultraman/Ultraman.html">Details</a></td>
 </tr>
 <tr>
-<td>Teenage Mutant Ninja Turtles</td><td>1984</td><td>12.70</td><td>Nickelodeon</td><td><a href="Creation/TMNT/TMNT.html">Details</a></td>
+<td>Teenage Mutant Ninja Turtles</td><td>1984</td><td>12.70</td><td>Nickelodeon</td><td><a href="TMNT/TMNT.html">Details</a></td>
 </tr>
 <tr>
-<td>Mario</td><td>1981</td><td>36.00</td><td>Nintendo</td><td><a href="Creation/Mario/Mario.html">Details</a></td>
+<td>Mario</td><td>1981</td><td>36.00</td><td>Nintendo</td><td><a href="Mario/Mario.html">Details</a></td>
 </tr>
 <tr>
-<td>Power Rangers</td><td>1993</td><td>09.30</td><td>Saban, Toei</td><td><a href="Creation/PowerRangers/PowerRangers.html">Details</a></td>
+<td>Power Rangers</td><td>1993</td><td>09.30</td><td>Saban, Toei</td><td><a href="PowerRangers/PowerRangers.html">Details</a></td>
 </tr>
 <tr>
-<td>Spider-Man</td><td>1962</td><td>28.00</td><td>Disney</td><td><a href="Creation/SpiderMan/SpiderMan.html">Details</a></td>
+<td>Spider-Man</td><td>1962</td><td>28.00</td><td>Disney</td><td><a href="SpiderMan/SpiderMan.html">Details</a></td>
 </tr>
 <tr>
-<td>Mickey Mouse</td><td>1928</td><td>70.00</td><td>Disney</td><td><a href="Creation/MickeyMouse/MickeyMouse.html">Details</a></td>
+<td>Mickey Mouse</td><td>1928</td><td>70.00</td><td>Disney</td><td><a href="MickeyMouse/MickeyMouse.html">Details</a></td>
 </tr>
 <tr>
-<td>Pirates of the Caribbean</td><td>1967</td><td>06.90</td><td>Disney</td><td><a href="Creation/PiratesOfTheCaribbean/PiratesOfTheCaribbean.html">Details</a></td>
+<td>Pirates of the Caribbean</td><td>1967</td><td>06.90</td><td>Disney</td><td><a href="PiratesOfTheCaribbean/PiratesOfTheCaribbean.html">Details</a></td>
 </tr>
 <tr>
-<td>Ice Age</td><td>2002</td><td>06.00</td><td>Fox</td><td><a href="Creation/IceAge/IceAge.html">Details</a></td>
+<td>Ice Age</td><td>2002</td><td>06.00</td><td>Fox</td><td><a href="IceAge/IceAge.html">Details</a></td>
 </tr>
 <tr>
-<td>Middle Earth</td><td>1937</td><td>19.90</td><td>AT &amp; T</td><td><a href="Creation/MiddleEarth/MiddleEarth.html">Details</a></td>
+<td>Middle Earth</td><td>1937</td><td>19.90</td><td>AT &amp; T</td><td><a href="MiddleEarth/MiddleEarth.html">Details</a></td>
 </tr>
 <tr>
-<td>Disney Princess</td><td>2000</td><td>45.00</td><td>Disney</td><td><a href="Creation/DisneyPrincess/DisneyPrincess.html">Details</a></td>
+<td>Disney Princess</td><td>2000</td><td>45.00</td><td>Disney</td><td><a href="DisneyPrincess/DisneyPrincess.html">Details</a></td>
 </tr>
 <tr>
-<td>Dragon Ball</td><td>1984</td><td>24.30</td><td>Toei</td><td><a href="Creation/Dragonball/Dragonball.html">Details</a></td>
+<td>Dragon Ball</td><td>1984</td><td>24.30</td><td>Toei</td><td><a href="Dragonball/Dragonball.html">Details</a></td>
 </tr>
 <tr>
-<td>Shrek</td><td>2001</td><td>05.10</td><td>Comcast</td><td><a href="Creation/Shrek/Shrek.html">Details</a></td>
+<td>Shrek</td><td>2001</td><td>05.10</td><td>Comcast</td><td><a href="Shrek/Shrek.html">Details</a></td>
 </tr>
 <tr>
-<td>Gundam</td><td>1979</td><td>26.00</td><td>Sunrise</td><td><a href="Creation/Gundam/Gundam.html">Details</a></td>
+<td>Gundam</td><td>1979</td><td>26.00</td><td>Sunrise</td><td><a href="Gundam/Gundam.html">Details</a></td>
 </tr>
 <tr>
-<td>Sonic the Hedgehog</td><td>1991</td><td>07.23</td><td>Sega</td><td><a href="Creation/SonicTheHedgehog/SonicTheHedgehog.html">Details</a></td>
+<td>Sonic the Hedgehog</td><td>1991</td><td>07.23</td><td>Sega</td><td><a href="SonicTheHedgehog/SonicTheHedgehog.html">Details</a></td>
 </tr>
 <tr>
-<td>Yu-Gi-Oh!</td><td>1996</td><td>19.80</td><td>Kazuki Takahashi Shueisha</td><td><a href="https://blzimg.github.io/YuGiOh/YuGiOh.html">Details</a></td>
+<td>Yu-Gi-Oh!</td><td>1996</td><td>19.80</td><td>Kazuki Takahashi Shueisha</td><td><a href="YuGiOh/YuGiOh.html">Details</a></td>
 </tr>
 <tr>
-<td>Jurassic Park</td><td>1993</td><td>07.07</td><td>Comcast</td><td><a href="Creation/JurassicPark/JurassicPark.html">Details</a></td>
+<td>Jurassic Park</td><td>1993</td><td>07.07</td><td>Comcast</td><td><a href="JurassicPark/JurassicPark.html">Details</a></td>
 </tr>
 <tr>
-<td>Mortal Kombat</td><td>1992</td><td>05.00</td><td>AT &amp; T</td><td><a href="Creation/MortalKombat/MortalKombat.html">Details</a></td>
+<td>Mortal Kombat</td><td>1992</td><td>05.00</td><td>AT &amp; T</td><td><a href="MortalKombat/MortalKombat.html">Details</a></td>
 </tr>
 <tr>
-<td>Halo</td><td>2001</td><td>05.00</td><td>Microsoft</td><td><a href="Creation/Halo/Halo.html">Details</a></td>
+<td>Halo</td><td>2001</td><td>05.00</td><td>Microsoft</td><td><a href="Halo/Halo.html">Details</a></td>
 </tr>
 <tr>
-<td>Smurfs</td><td>1958</td><td>05.00</td><td>AT &amp; T</td><td><a href="https://blzimg.github.io/Smurfs/Smurfs.html">Details</a></td>
+<td>Smurfs</td><td>1958</td><td>05.00</td><td>AT &amp; T</td><td><a href="Smurfs/Smurfs.html">Details</a></td>
 </tr>
 <tr>
-<td>Beyblade</td><td>1999</td><td>04.60</td><td>Shogakukan</td><td><a href="Creation/Beyblade/Beyblade.html">Details</a></td>
+<td>Beyblade</td><td>1999</td><td>04.60</td><td>Shogakukan</td><td><a href="Beyblade/Beyblade.html">Details</a></td>
 </tr>
 <tr>
-<td>Ben 10</td><td>2005</td><td>07.85</td><td>AT &amp; T</td><td><a href="Creation/Ben10/Ben10.html">Details</a></td>
+<td>Ben 10</td><td>2005</td><td>07.85</td><td>AT &amp; T</td><td><a href="Ben10/Ben10.html">Details</a></td>
 </tr>
 <tr>
-<td>Seinfeld</td><td>1989</td><td>04.06</td><td>Comcast</td><td><a href="Creation/Seinfeld/Seinfeld.html">Details</a></td>
+<td>Seinfeld</td><td>1989</td><td>04.06</td><td>Comcast</td><td><a href="Seinfeld/Seinfeld.html">Details</a></td>
 </tr>
 <tr>
-<td>Mission: Impossible</td><td>1966</td><td>04.00</td><td>CBS</td><td><a href="Creation/MissionImpossible/MissionImpossible.html">Details</a></td>
+<td>Mission: Impossible</td><td>1966</td><td>04.00</td><td>CBS</td><td><a href="MissionImpossible/MissionImpossible.html">Details</a></td>
 </tr>
 <tr>
-<td>Skylanders</td><td>2011</td><td>03.50</td><td>Activision Blizzard</td><td><a href="Creation/Skylanders/Skylanders.html">Details</a></td>
+<td>Skylanders</td><td>2011</td><td>03.50</td><td>Activision Blizzard</td><td><a href="Skylanders/Skylanders.html">Details</a></td>
 </tr>
 <tr>
-<td>Terminator</td><td>1984</td><td>03.00</td><td>David Ellison</td><td><a href="Creation/Terminator/Terminator.html">Details</a></td>
+<td>Terminator</td><td>1984</td><td>03.00</td><td>David Ellison</td><td><a href="Terminator/Terminator.html">Details</a></td>
 </tr>
 <tr>
-<td>Matrix</td><td>1999</td><td>03.00</td><td>AT &amp; T</td><td><a href="Creation/Matrix/Matrix.html">Details</a></td>
+<td>Matrix</td><td>1999</td><td>03.00</td><td>AT &amp; T</td><td><a href="Matrix/Matrix.html">Details</a></td>
 </tr>
 <tr>
-<td>Astro Boy</td><td>1952</td><td>03.00</td><td>Tezuka Productions</td><td><a href="Creation/AstroBoy/AstroBoy.html">Details</a></td>
+<td>Astro Boy</td><td>1952</td><td>03.00</td><td>Tezuka Productions</td><td><a href="AstroBoy/AstroBoy.html">Details</a></td>
 </tr>
 <tr>
-<td>G.I. Joe</td><td>1964</td><td>03.40</td><td>Hasbro</td><td><a href="Creation/GIJoe/GIJoe.html">Details</a></td>
+<td>G.I. Joe</td><td>1964</td><td>03.40</td><td>Hasbro</td><td><a href="GIJoe/GIJoe.html">Details</a></td>
 </tr>
 <tr>
-<td>Sailor Moon</td><td>1991</td><td>14.30</td><td>Toei</td><td><a href="Creation/SailorMoon/SailorMoon.html">Details</a></td>
+<td>Sailor Moon</td><td>1991</td><td>14.30</td><td>Toei</td><td><a href="SailorMoon/SailorMoon.html">Details</a></td>
 </tr>
 <tr>
-<td>Gran Turismo</td><td>1997</td><td>02.50</td><td>Sony</td><td><a href="Creation/GranTurismo/GranTurismo.html">Details</a></td>
+<td>Gran Turismo</td><td>1997</td><td>02.50</td><td>Sony</td><td><a href="GranTurismo/GranTurismo.html">Details</a></td>
 </tr>
 <tr>
-<td>Hamtaro</td><td>1997</td><td>02.50</td><td>Shogakukan</td><td><a href="Creation/Hamtaro/Hamtaro.html">Details</a></td>
+<td>Hamtaro</td><td>1997</td><td>02.50</td><td>Shogakukan</td><td><a href="Hamtaro/Hamtaro.html">Details</a></td>
 </tr>
 <tr>
-<td>Powerpuff Girls</td><td>1998</td><td>02.50</td><td>AT &amp; T</td><td><a href="Creation/PowerpuffGirls/PowerpuffGirls.html">Details</a></td>
+<td>Powerpuff Girls</td><td>1998</td><td>02.50</td><td>AT &amp; T</td><td><a href="PowerpuffGirls/PowerpuffGirls.html">Details</a></td>
 </tr>
 <tr>
-<td>Winx Club</td><td>2004</td><td>02.50</td><td>Rainbow S.r.l.</td><td><a href="https://blzimg.github.io/Winx/Winx.html">Details</a></td>
+<td>Winx Club</td><td>2004</td><td>02.50</td><td>Rainbow S.r.l.</td><td><a href="Winx/Winx.html">Details</a></td>
 </tr>
 <tr>
-<td>Superman</td><td>1938</td><td>11.10</td><td>AT &amp; T</td><td><a href="Creation/Superman/Superman.html">Details</a></td>
+<td>Superman</td><td>1938</td><td>11.10</td><td>AT &amp; T</td><td><a href="Superman/Superman.html">Details</a></td>
 </tr>
 <tr>
-<td>Neon Genesis Evangelion</td><td>1994</td><td>16.30</td><td>Khara</td><td><a href="Creation/NeonGenesis/NeonGenesis.html">Details</a><td>
+<td>Neon Genesis Evangelion</td><td>1994</td><td>16.30</td><td>Khara</td><td><a href="NeonGenesis/NeonGenesis.html">Details</a><td>
 </tr>
 <tr>
-<td>Yo-kai Watch</td><td>2013</td><td>02.00</td><td>Level 5, Nintendo</td><td><a href="https://blzimg.github.io/YokaiWatch/YokaiWatch.html">Details</a></td>
+<td>Yo-kai Watch</td><td>2013</td><td>02.00</td><td>Level 5, Nintendo</td><td><a href="YokaiWatch/YokaiWatch.html">Details</a></td>
 </tr>
 <tr>
-<td>Ghostbusters</td><td>1984</td><td>01.74</td><td>Sony</td><td><a href="Creation/Ghostbusters/Ghostbusters.html">Details</a></td>
+<td>Ghostbusters</td><td>1984</td><td>01.74</td><td>Sony</td><td><a href="Ghostbusters/Ghostbusters.html">Details</a></td>
 </tr>
 <tr>
-<td>Rugrats</td><td>1991</td><td>01.69</td><td>Nickelodeon</td><td><a href="Creation/Rugrats/Rugrats.html">Details</a></td>
+<td>Rugrats</td><td>1991</td><td>01.69</td><td>Nickelodeon</td><td><a href="Rugrats/Rugrats.html">Details</a></td>
 </tr>
 <tr>
-<td>Scooby-Doo</td><td>1969</td><td>01.50</td><td>AT &amp; T</td><td><a href="Creation/ScoobyDoo/ScoobyDoo.html">Details</a></td>
+<td>Scooby-Doo</td><td>1969</td><td>01.50</td><td>AT &amp; T</td><td><a href="ScoobyDoo/ScoobyDoo.html">Details</a></td>
 </tr>
 <tr>
-<td>Care Bears</td><td>1981</td><td>01.50</td><td>American Greetings</td><td><a href="Creation/CareBears/CareBears.html">Details</a></td>
+<td>Care Bears</td><td>1981</td><td>01.50</td><td>American Greetings</td><td><a href="CareBears/CareBears.html">Details</a></td>
 </tr>
 <tr>
-<td>Resident Evil</td><td>1996</td><td>05.17</td><td>Capcom</td><td><a href="Creation/ResidentEvil/ResidentEvil.html">Details</a></td>
+<td>Resident Evil</td><td>1996</td><td>05.17</td><td>Capcom</td><td><a href="ResidentEvil/ResidentEvil.html">Details</a></td>
 </tr>
 <tr>
-<td>One Piece</td><td>1997</td><td>21.00</td><td>Eiichiro Oda</td><td><a href="Creation/OnePiece/OnePiece.html">Details</a></td>
+<td>One Piece</td><td>1997</td><td>21.00</td><td>Eiichiro Oda</td><td><a href="OnePiece/OnePiece.html">Details</a></td>
 </tr>
 <tr>
-<td>Doraemon</td><td>1969</td><td>01.14</td><td>Shogakukan</td><td><a href="Creation/Doraemon/Doraemon.html">Details</a></td>
+<td>Doraemon</td><td>1969</td><td>01.14</td><td>Shogakukan</td><td><a href="Doraemon/Doraemon.html">Details</a></td>
 </tr>
 <tr>
-<td>X-Files</td><td>1993</td><td>01.00</td><td>Fox</td><td><a href="https://blzimg.github.io/XFiles/XFiles.html">Details</a></td>
+<td>X-Files</td><td>1993</td><td>01.00</td><td>Fox</td><td><a href="XFiles/XFiles.html">Details</a></td>
 </tr>
 <tr>
-<td>Family Guy</td><td>1999</td><td>01.00</td><td>Fox</td><td><a href="Creation/FamilyGuy/FamilyGuy.html">Details</a></td>
+<td>Family Guy</td><td>1999</td><td>01.00</td><td>Fox</td><td><a href="FamilyGuy/FamilyGuy.html">Details</a></td>
 </tr>
 <tr>
-<td>Digimon</td><td>1997</td><td>01.00</td><td>Bandai Namco</td><td><a href="Creation/Digimon/Digimon.html">Details</a></td>
+<td>Digimon</td><td>1997</td><td>01.00</td><td>Bandai Namco</td><td><a href="Digimon/Digimon.html">Details</a></td>
 </tr>
 <tr>
-<td>My Little Pony</td><td>2010</td><td>01.00</td><td>Hasbro</td><td><a href="Creation/MyLittlePony/MyLittlePony.html">Details</a></td>
+<td>My Little Pony</td><td>2010</td><td>01.00</td><td>Hasbro</td><td><a href="MyLittlePony/MyLittlePony.html">Details</a></td>
 </tr>
 <tr>
 <td>Winnie the Pooh</td><td>1966</td><td>16.00</td><td>Disney</td><td>Details</td>
