--- a/Bullwinkle/Bullwinkle.html
+++ b/Bullwinkle/Bullwinkle.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Bullwinkle1.jpg"> <br>
-Animated TV series from 1959-1961 ABC, 1961-1964 NBC.<br>
+Animated TV series from 1959-1961 <a href="../ABC/ABC.html">ABC</a>, 1961-1964 <a href="../NBC/NBC.html">NBC</a>.<br>
 21 issue comic book series by Dell Goldkey and Charlton
 <p>
 <div class="row"><div class="column">
