--- a/KolchakTheNightStalker/KolchakTheNightStalker.html
+++ b/KolchakTheNightStalker/KolchakTheNightStalker.html
@@ -9,8 +9,7 @@
 
 <body>
 <img src="KolchakTheNightStalker1.jpg" title="Kolchak The Night Stalker"> <br>
-Series: 20 TV Episodes 1974 - 1975<br>
-Producer: ABC, Universal<br>
+20 TV Episodes from 1974 - 1975 by <a href="../ABC/ABC.html">ABC</a>
 <p>
 Kolchak: The Night Stalker is an American television series that aired on ABC during the 1974–1975 season. It featured a fictional Chicago newspaper reporter, Carl Kolchak, played by Darren McGavin, who investigated mysterious crimes with unlikely causes, particularly those that law enforcement authorities would not follow up. These often involved the supernatural or science fiction, including fantastic creatures.
 </p><p>
