--- a/LandOfTheLostTV/LandOfTheLostTV.html
+++ b/LandOfTheLostTV/LandOfTheLostTV.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="LOTL1.jpg"> <br>
-43 episode TV Series from 1974-1976, 1 Movie in 2009 by Universal
+43 episode TV Series from 1974-1976 by <a href="../NBC/NBC.html">NBC</a>
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
