--- a/Thundarr/Thundarr.html
+++ b/Thundarr/Thundarr.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Thundarr.jpg"> <br>
-21 TV episodes (2 seasons) 1980 - 1981 by Ruby-Spears (ABC)<br>
+21 TV episodes (2 seasons) 1980 - 1981 by Ruby-Spears on <a href="../ABC/ABC.html">ABC</a><br>
 Created by: Steve Gerber, <a href="../AlexToth/AlexToth.html">Alex Toth</a>, <a href="../JackKirby/JackKirby.html">Jack Kirby</a>
 <p>
 <div class="row"><div class="column">
