--- a/index.html
+++ b/index.html
@@ -464,6 +464,13 @@
 </tr>
 
 <tr>
+<td>ACG</td>
+<td>1955</td>
+<td>Publisher</td>
+<td><a href="ACG/ACG.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Achewood</td>
 <td>2001</td>
 <td>Dark Horse</td>
@@ -1723,6 +1730,13 @@
 <td>1942</td>
 <td>Archie</td>
 <td><a href="Archie/Archie.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Archie Comics</td>
+<td>1942</td>
+<td>Publisher</td>
+<td><a href="ArchieComics/ArchieComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15181,6 +15195,13 @@
 <td>1994</td>
 <td>Dark Horse</td>
 <td><a href="Timecop/Timecop.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Timely Comics</td>
+<td>1939</td>
+<td>Publisher</td>
+<td><a href="TimelyComics/TimelyComics.html">Details</a></td>
 </tr>
 
 <tr>
