--- a/Silverheels/Silverheels.html
+++ b/Silverheels/Silverheels.html
@@ -2,19 +2,32 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Silverheels</title>
 </head>
 
 <body>
-<h2>Silverheels</h2>
-<img src="silverheels01.jpg"> 
-<img src="silverheels02.jpg"> 
-<img src="silverheels03.jpg"> 
-<img src="silverheels04.jpg"> <br>
-Series: 3 issue mini series by PC. 4th issue is Graphic Novel by Eclipse.<br>
-Publisher: 1983 PC<br>
+<img src="silverheels01.jpg"><br>
+3 issues in 1983 by <a href="../PacificComics/PacificComics.html">PC</a>. 4th issue is Graphic Novel by Eclipse
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="silverheels01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverheels02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverheels03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverheels04.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Stories by Bruce Jones and April Campbell. Art by Scott Hampton and Ken Steacy. Cover by Scott Hampton. A science fiction miniseries from influential independent publisher Pacific Comics. Silverheels lives in a future reservation, but he dreams of life on the outside. But escape reveals a world under the thumb of an alien empire, where a fascistic state struggles to maintain its hold on power. Also featuring a Flan backup story. Silverheels; Robotus Ridiculous. 
 </p><p>
 Silverheels escapes from the reservation and joins the aliens cadet training program. Also featuring a Flan backup story and two 5-page pinup galleries, one for Scott Hampton and one for Ken Steacy. Silverheels; War of the Blorts! 
