--- a/Silverstar/Silverstar.html
+++ b/Silverstar/Silverstar.html
@@ -2,27 +2,39 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Silver Star</title>
 </head>
 
 <body>
-<h2>Silver Star</h2>
-<img src="silverstar01.jpg">
-<img src="silverstar02.jpg">
-<img src="silverstar03.jpg">
-<img src="silverstar04.jpg">
-<img src="silverstar05.jpg">
-<img src="silverstar06.jpg"> <br>
-Creator: Jack Kirby<br>
-Series: 6 issue mini series<br>
-Publisher: 1983 PC<br>
+<img src="silverstar01.jpg"><br>
+6 issues created by Jack Kirby in 1983 by <a href="../PacificComics/PacificComics.html">PC</a>
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="silverstar01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverstar02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverstar03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverstar04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverstar05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="silverstar06.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Silver Star is a comic book created, written, and drawn by Jack Kirby, originally published by Pacific Comics in 1983.
 </p><p>
 The concept for Silver Star began in the mid-1970s as a movie screenplay by Jack Kirby and Steve Sherman. The final comic series was based on the initial screenplay, with some revision made by Kirby.
 </p><p>
-The original Pacific Comics series ran from February 1983 to January 1984, lasting six issues. The series was launched following the success of Kirby's previous creator-owned book for Pacific, Captain Victory and the Galactic Rangers. Silver Star follows the exploits of government agent Morgan Miller, who, after being transformed into a genetic mutant ("Homo Geneticus") by his father Dr. Bradford Miller, was appointed the task of fighting other super powered beings. In the six-issue series Silver Star teams with fellow "Homo Geneticus" Norma Richmond (gifted with the ability to resist enormous stress) and Big Masai (a size changing mutant), and battles with the villainous Darius Drumm, an early subject of Dr. Bradford Miller's genetic structuring with the ability to warp reality.
+The series was launched following the success of Kirby's previous creator-owned book for Pacific, Captain Victory and the Galactic Rangers. Silver Star follows the exploits of government agent Morgan Miller, who, after being transformed into a genetic mutant ("Homo Geneticus") by his father Dr. Bradford Miller, was appointed the task of fighting other super powered beings. In the six-issue series Silver Star teams with fellow "Homo Geneticus" Norma Richmond (gifted with the ability to resist enormous stress) and Big Masai (a size changing mutant), and battles with the villainous Darius Drumm, an early subject of Dr. Bradford Miller's genetic structuring with the ability to warp reality.
 </p>
 
 </body>
