--- a/MissionImpossible/MissionImpossible.html
+++ b/MissionImpossible/MissionImpossible.html
@@ -11,7 +11,7 @@
 <img src="MissionImpossibleFilms.jpg"><br>
 Creator: Bruce Geller<br>
 Series: TV 1966, Film 1996<br>
-Publisher: Desilu (CBS), Paramount <br>
+Publisher: Desilu <a href="../CBS/CBS.html">CBS</a>, <a href="../Paramount/Paramount.html">Paramount</a>
 <p>
 The Mission: Impossible series is the 20th-highest-grossing film series of all time, with a worldwide gross of over $2.7 billion to date.
 </p><p>
