--- a/SkeletonWarriors/SkeletonWarriors.html
+++ b/SkeletonWarriors/SkeletonWarriors.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-<img src="SkeletonWarriors.jpg"> <br>
+<img src="SkeletonWarriors2.jpg"> <img src="SkeletonWarriors.jpg"> <br>
 Series: 1 TV series, 4 issue mini-series 1995<br>
-Publisher: CBS, Marvel<br>
+Publisher: <a href="../CBS/CBS.html">CBS</a>, <a href="../Marvel/Marvel.html">Marvel</a>
 <p>
 Skeleton Warriors is a 13-episode cartoon series created by Landmark Entertainment Group, which originally aired in 1994–1995 on CBS.
 </p><p>
