--- a/index.html
+++ b/index.html
@@ -2015,6 +2015,13 @@
 </tr>
 
 <tr>
+<td>Avon</td>
+<td>1941</td>
+<td>Publisher</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>AVX: Consequences</td>
 <td>2012</td>
 <td>Marvel</td>
@@ -2731,6 +2738,13 @@
 </tr>
 
 <tr>
+<td>Black Mask Studios</td>
+<td>2012</td>
+<td>Publisher</td>
+<td><a href="BlackMask/BlackMask.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Black Monday Murders</td>
 <td>2016</td>
 <td>Image</td>
@@ -3014,6 +3028,13 @@
 <td>2004</td>
 <td>Vertigo</td>
 <td><a href="BooksOfMagicLifeWartime/BooksOfMagicLifeWartime.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Boom! Studios</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="Boom!/Boom!.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10938,6 +10959,13 @@
 </tr>
 
 <tr>
+<td>Monster World</td>
+<td>1964</td>
+<td>Warren</td>
+<td><a href="MonsterWorld/MonsterWorld.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monsters on the Prowl</td>
 <td>1971</td>
 <td>Marvel</td>
@@ -12069,6 +12097,13 @@
 <td>2015</td>
 <td>Image</td>
 <td><a href="PaperGirls/PaperGirls.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Paramount</td>
+<td>1914</td>
+<td>Publisher</td>
+<td><a href="Paramount/Paramount.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14092,6 +14127,13 @@
 </tr>
 
 <tr>
+<td>Spacemen</td>
+<td>1961</td>
+<td>Warren</td>
+<td><a href="Spacemen/Spacemen.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space War</td>
 <td>1959</td>
 <td>Charlton</td>
@@ -16043,6 +16085,13 @@
 <td>1979</td>
 <td>Warren</td>
 <td><a href="WarrenPresents/WarrenPresents.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warren Publishing</td>
+<td>1957</td>
+<td>Publisher</td>
+<td><a href="Warren/Warren.html">Details</a></td>
 </tr>
 
 <tr>
