--- a/StarTrek/StarTrek.html
+++ b/StarTrek/StarTrek.html
@@ -13,8 +13,7 @@
 <img src="StarTrekVoyagerCrew.jpg">
 <img src="StarTrek2009.jpg">
 <br>
-Creator: Gene Roddenberry<br>
-Publisher: CBS 1966, Paramount (Viacom) 1979<br>
+Creator: Gene Roddenberry, in 1966 by <a href="../CBS/CBS.html">CBS</a>, <a href="../Paramount/Paramount.html">Paramount</a> (Viacom) in 1979
 <p>
 Star Trek is an American media franchise based on the science fiction television series created by Gene Roddenberry. The first television series, simply called Star Trek and now referred to as "The Original Series", debuted in 1966 and aired for three seasons on the television network NBC. It followed the interstellar adventures of Captain James T. Kirk and his crew aboard the starship USS Enterprise, a space exploration vessel, built by the United Federation of Planets in the twenty-third century.
 </p><p>
