--- a/DCComics/DCComics.html
+++ b/DCComics/DCComics.html
@@ -26,6 +26,73 @@ Entrepreneur Major Malcolm Wheeler-Nicholson founded National Allied Publication
 That title evolved into Adventure Comics, which continued through issue #503 in 1983, becoming one of the longest-running comic-book series. In 2009 DC revived Adventure Comics with its original numbering. In 1935, Jerry Siegel and Joe Shuster, the future creators of Superman, created Doctor Occult, who is the earliest DC Comics character to still be in the DC Universe.
 </p><p>
 All-American Publications is one of three American comic book companies that combined to form the modern-day DC Comics, one of the world's two largest comics publishers. Superheroes created for All-American include the original Atom, Flash, Green Lantern, Hawkman, and Wonder Woman, all in the 1940s' Golden Age of comic books.
+</p><p>
+<li>Action Comics 
+<li>Aquaman 
+<li>Batgirl 
+<li>Batman 
+<li>Batman/Superman 
+<li>Batman and the Outsiders 
+<li>Batman Beyond 
+<li>Books of Magic 
+<li>Catwoman 
+<li>Deathstroke 
+<li>Detective Comics 
+<li>Doom Patrol: Weight of the Worlds 
+<li>The Dreaming 
+<li>The Flash 
+<li>The Green Lantern 
+<li>Harley Quinn 
+<li>Hawkman 
+<li>House of Whispers 
+<li>Justice League 
+<li>Justice League Dark 
+<li>Justice League Odyssey 
+<li>Looney Tunes 
+<li>Lucifer 
+<li>Mad Magazine 
+<li>Nightwing 
+<li>Red Hood and the Outlaws 
+<li>Scooby-Doo, Where Are You? 
+<li>Shazam! 
+<li>Supergirl 
+<li>Superman 
+<li>Teen Titans 
+<li>The Terrifics 
+<li>WildC.A.T.s 
+<li>Wonder Woman 
+<li>Young Justice 
+<li>Basketful of Heads 
+<li>Birds of Prey 
+<li>Batman: Creature of the Night 
+<li>Batman: Curse of the White Knight 
+<li>Batman: Last Knight on Earth 
+<li>Batman: Universe 
+<li>Batman vs. Ra's al Ghul 
+<li>Collapser 
+<li>Dial H for Hero 
+<li>Flash Forward 
+<li>Freedom Fighters 
+<li>Gotham City Monsters 
+<li>Harleen 
+<li>Harley Quinn and Poison Ivy 
+<li>Inferior Five 
+<li>Joker/Harley: Criminal Sanity 
+<li>Legion of Super-Heroes: Millennium 
+<li>Lois Lane 
+<li>Martian Manhunter 
+<li>Metal Men 
+<li>RWBY 
+<li>Superman Smashes the Klan 
+<li>Superman: Up in the Sky 
+<li>Superman's Pal Jimmy Olsen 
+<li>The Batman's Grave 
+<li>The Joker: Killer Smile 
+<li>The Last God 
+<li>Titans: Burning Rage 
+<li>Wonder Twins 
+<li>Wonder Woman: Come Back to Me 
+
 </p>
 </body>
 </html>
