--- a/Marvel/Marvel.html
+++ b/Marvel/Marvel.html
@@ -70,6 +70,76 @@ Marvel Imprints:
 <li>Star Comics
 <li>Tsunami
 <li>Ultimate Comics
+</p><p>
+Titles:
+</p><p>
+<li>Aero 
+<li>Amazing Spider-Man: Daily Bugle 
+<li>Ant-Man 
+<li>Atlantis Attacks 
+<li>Avengers 
+<li>Avengers of the Wastelands 
+<li>Black Cat 
+<li>Black Panther 
+<li>Black Panther and the Agents of Wakanda 
+<li>Cable 
+<li>Captain America 
+<li>Captain Marvel 
+<li>Conan the Barbarian 
+<li>Daredevil 
+<li>Deadpool 
+<li>Doctor Doom 
+<li>Excalibur 
+<li>Falcon &amp; Winter Soldier 
+<li>Fallen Angels 
+<li>Fantastic Four 
+<li>Force Works 2020 
+<li>Ghost Rider 
+<li>Ghost-Spider 
+<li>Guardians of the Galaxy 
+<li>Gwen Stacy 
+<li>Hawkeye: Freefall 
+<li>Hellions 
+<li>Immortal Hulk 
+<li>Iron Man 2020 
+<li>Machine Man 2020 
+<li>Magnificent Ms. Marvel 
+<li>Marauders 
+<li>Marvel's Spider-Man: The Black Cat Strikes 
+<li>Marvels X 
+<li>Miles Morales: Spider-Man 
+<li>Morbius 
+<li>Nebula 
+<li>New Mutants 
+<li>Punisher Soviet 
+<li>Ravencroft 
+<li>Rescue 2020
+<li>Runaways 
+<li>Savage Avengers 
+<li>Savage Sword of Conan 
+<li>Scream: Curse of Carnage 
+<li>Spider-Man 
+<li>Spider-Man/Venom: Double Trouble 
+<li>Spider-Verse 
+<li>Spider-Woman 
+<li>Star 
+<li>Star Wars 
+<li>Star Wars: Bounty Hunters 
+<li>Strikeforce 
+<li>Sword Master 
+<li>Tarot 
+<li>The Amazing Mary Jane 
+<li>The Amazing Spider-Man 
+<li>The Web of Black Widow 
+<li>Thor 
+<li>Valkyrie: Jane Foster 
+<li>Venom 
+<li>Wolverine
+<li>X-Force 
+<li>X-Men 
+<li>X-Men/Fantastic Four 
+<li>Yondu 
+
 </p>
 </body>
 </html>
