--- a/index.html
+++ b/index.html
@@ -3549,6 +3549,13 @@
 </tr>
 
 <tr>
+<td>Centaur Publications</td>
+<td>2017</td>
+<td>Publisher</td>
+<td><a href="CentaurPublications/CentaurPublications.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Centipede</td>
 <td>2017</td>
 <td>Dynamite Entertainment</td>
@@ -6601,6 +6608,20 @@
 <td>1945</td>
 <td>Timely</td>
 <td><a href="FunnyFrolics/FunnyFrolics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Funny Pages</td>
+<td>1938</td>
+<td>Centaur</td>
+<td><a href="FunnyPages/FunnyPages.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Funny Picture Stories</td>
+<td>1938</td>
+<td>Centaur</td>
+<td><a href="FunnyPictureStories/FunnyPictureStories.html">Details</a></td>
 </tr>
 
 <tr>
