Bringing up Father

--- a/CupplesLeon/CupplesLeon.html
+++ b/CupplesLeon/CupplesLeon.html
@@ -18,7 +18,7 @@ Cupples &amp; Leon collected such strips as:<br>
 <li><a href="../HappyHooligan/HappyHooligan.html">Happy Hooligan</a>
 <li>On and Off the Ark
 <li>Poor Lil Mose and The Tigers
-<li>Bringing Up Father
+<li><a href="../BringingUpFather/BringingUpFather.html">Bringing Up Father</a>
 <li><a href="../AdventuresOfLittleOrphanAnnie/AdventuresOfLittleOrphanAnnie.html">Little Orphan Annie</a>
 <li>Mutt and Jeff
 <li><a href="../ReglarFellers/ReglarFellers.html">Reg'lar Fellers</a>
